--- a/app/src/components/shared/css/Footer.module.css
+++ b/app/src/components/shared/css/Footer.module.css
@@ -1,12 +1,14 @@
+/*Footer*/
 footer {
   position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
-  z-index:-10;
+  z-index: -10;
 }
 
 .footer_svg {
+  height: 20rem;
+  width: 100%;
   background-size: cover;
-  margin-bottom: -5px;
 }
