--- a/app/src/components/Vote/Vote.module.css
+++ b/app/src/components/Vote/Vote.module.css
@@ -1,13 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Beau+Rivage&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Cookie&display=swap");
 
 .container {
   display: flex;
   justify-content: center;
-  margin-top: 20px;
+  margin-top: 10px;
 }
 
 .wrapper {
-  width: 60%;
+  width: 55%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -15,8 +15,9 @@
 
 .heading {
   font-weight: bold;
-  font-size: 25px;
-  padding-bottom: 20px;
+  font-size: 34px;
+  padding-bottom: 25px;
+  font-family: 'Poppins';
 }
 
 .card_container {
@@ -25,21 +26,32 @@
   justify-content: space-between;
 }
 
-.vs{
-    display: flex;
-    align-items: center;
-    font-size:50px;
-    font-family: 'Beau Rivage', cursive;
+.vs {
+  display: flex;
+  align-items: center;
+  font-size: 64px;
+  font-family: "Cookie", cursive;
+  font-weight: 400;
+}
+
+.last_heading {
+  font-family: "Poppins";
+  font-weight: 500;
+  font-size: 35px;
+  padding-top: 30px;
+  letter-spacing: -0.03em;
+  color: #2b2d42;
+  opacity: 0.75;
 }
 
 /*Card*/
 .card {
   border: 2px solid #2b2d42;
-  display:flex;
+  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding:30px 25px;
+  padding: 30px 25px;
 }
 
 .image {
@@ -48,27 +60,27 @@
   border-radius: 50%;
 }
 
-.image_name{
-    padding: 25px 0;
-    font-size:20px;
-    font-weight: bold;
+.image_name {
+  padding: 25px 0;
+  font-size: 24px;
+  font-weight: bold;
+  font-family: "Poppins";
 }
-
 
 /*Media Queries */
-@media (min-width:600px) and (max-width:960px){
-    .wrapper{
-        width:85%;
-    }
+@media (min-width: 600px) and (max-width: 960px) {
+  .wrapper {
+    width: 85%;
+  }
 }
 
-@media (max-width:600px){
-    .card_container{
-        display: flex;
-        flex-direction: column;
-    }
-    .vs{
-        display: flex;
-        justify-content: center;
-    }
+@media (max-width: 600px) {
+  .card_container {
+    display: flex;
+    flex-direction: column;
+  }
+  .vs {
+    display: flex;
+    justify-content: center;
+  }
 }
