--- a/app/src/components/Rank/css/RankTable.module.css
+++ b/app/src/components/Rank/css/RankTable.module.css
@@ -1,4 +1,3 @@
-
 .text {
   font-size: 25px;
   font-weight: bold;
@@ -9,18 +8,35 @@
   width: 90%;
   background-color: white;
   border-radius: 2px;
-  padding:20px 30px 65px;
+  padding: 20px 30px 65px;
 }
 
-.table_heading{
-    display:flex;
-    justify-content: space-between;
-    border-bottom: 1px solid #8D99AE;
-    padding:0 30px;
-    margin-bottom:20px;
+.second_list {
+  width: 90%;
+  background-color: white;
+  border-radius: 2px;
+  padding: 20px 30px 220px;
 }
 
-.heading{
-    font-size:21px;
-    font-weight: bold;
+.table_heading {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid #8d99ae;
+  padding: 0 30px;
+  margin-bottom: 20px;
+}
+
+.heading {
+  font-size: 21px;
+  font-weight: bold;
+}
+
+.list_container {
+  background-color: #edf2f4;
+  display: flex;
+  justify-content: space-between;
+  margin: 15px;
+  padding: 10px 20px;
+  font-size: 17px;
+  font-weight: 500;
 }
